<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Envanto Barkod</string>
    <string name="app_description">Barkod tarama ve yükleme işlemlerinizi kolayca gerçekleştirin</string>
    <string name="scan_barcode_instruction">Barkodu taramak için çerçeve içine yerleştirin</string>
    <string name="flash_on">Flaşı Aç</string>
    <string name="flash_off">Flaşı Kapat</string>
    <string name="permission_camera_rationale">Barkod tarama için kamera erişimi gereklidir</string>
    <string name="no_camera_permission">Kamera izni verilmediği için tarama yapılamıyor.</string>
    <string name="button_ok">Tamam</string>
    <string name="msg_camera_framework_bug">Üzgünüz, kamera ile ilgili bir sorun oluştu. Cihazınızı yeniden başlatmanız gerekebilir.</string>
    <string name="settings_title">Ayarlar</string>
    <string name="url_settings_title">Barkod Yönlendirme Adresi</string>
    <string name="url_settings_description">Taranan barkodların gönderileceği URL temel adresini belirleyin. Barkod içeriği bu adresin sonuna eklenecektir.</string>
    <string name="url_base_hint">URL Temel Adresi</string>
    <string name="url_settings_note">Not: URL, \"http://\" veya \"https://\" ile başlamalıdır.</string>
    <string name="save">Kaydet</string>
    <string name="reset_default">Varsayılan</string>
    <string name="settings_saved">Ayarlar kaydedildi</string>
    <string name="error_empty_url">URL adresi boş olamaz</string>
    <string name="error_invalid_url">Geçersiz URL formatı. URL \"http://\" veya \"https://\" ile başlamalıdır</string>
    <string name="action_settings">Ayarlar</string>
    <string name="scan_barcode">Barkod Tara</string>
    <string name="upload_barcode">Barkod Yükle</string>
    <string name="home">Ana Sayfa</string>
    <string name="search_customer">Müşteri Ara</string>
    <string name="select_images">Resimleri Seç</string>
    <string name="selected_customer">Seçilen Müşteri: %1$s</string>
    <string name="customer_images">Müşteri Resimleri</string>
    <string name="vehicle_products">Araçtaki Ürünler</string>
    <string name="coming_soon">Yakında Eklenecek</string>
</resources> 